# Climate2Weather

./: .gitignore  CITATION.cff  README.md  dataset.py  experiment.py  requirements.txt  run_training.sh  setup.cfg  train.py  training_loop.py  util.py
configs/: sda_unet.yml
data/: COSMO_patch_index-ranges.npz  README.md  cdo_preproc.sh  pipeline.py  processing.py  xarray_preproc.py
exp/: __init__.py  downscaling.py  exputil.py  figures.py  metrics.py  plotting_util.py
exp/configs/000_on-model-eval/: s16_t6.yml  s16_t6_storm.yml
exp/configs/001_clim-downscaling/: biased_climate_hadgem.yml  biased_climate_mpi.yml  qm_debiased_climate_hadgem.yml  qm_debiased_climate_mpi.yml
model/: nn.py  score.py
src/thor/: __init__.py  checkpoint.py  ema.py  lr.py  pipelines.py  score.py
