[metadata]
name = thor
description = A hammer looking for nails. This specific nail is spatial and temporal downscaling climate simulations to weather resolution.
author = Jonathan Schmidt
author_email = jonathan.schmidt@uni-tuebingen.de
version = 0.0.1

[options]
packages = find:
python_requires = >=3.9
package_dir =
    =src


[options.packages.find]
where = src
